Bug 452940 - A dir named 'core' is not identified as a dir over fish.
Summary: A dir named 'core' is not identified as a dir over fish.
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: FISH (other bugs)
Version First Reported In: 22.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-04-24 09:32 UTC by Antonio Rojas
Modified: 2022-04-27 18:55 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2022-04-24 09:32:32 UTC
Over a remote sftp location, a directory named 'core' is identified as a coredump file instead of a dir, so it's impossible to navigate into it.
Comment 1 Antonio Rojas 2022-04-24 09:34:14 UTC
Caused by 7aa15aafe1dddb520e3bc5c573ab5a70b857c97b
Comment 2 Antonio Rojas 2022-04-24 09:39:14 UTC
(In reply to Antonio Rojas from comment #0)
> Over a remote sftp location, a directory named 'core' is identified as a
> coredump file instead of a dir, so it's impossible to navigate into it.

Correction: I meant fish, not sftp. sftp works fine.
Comment 3 Méven Car 2022-04-26 09:34:18 UTC
(In reply to Antonio Rojas from comment #2)
> (In reply to Antonio Rojas from comment #0)
> > Over a remote sftp location, a directory named 'core' is identified as a
> > coredump file instead of a dir, so it's impossible to navigate into it.
> 
> Correction: I meant fish, not sftp. sftp works fine.

That's a fish issue the Kio patch 7aa15aafe1dddb520e3bc5c573ab5a70b857c97b revealed.
Returning a wrong mimetype.
Comment 4 Antonio Rojas 2022-04-27 06:42:47 UTC
https://invent.kde.org/network/kio-extras/-/merge_requests/151

(not sure why the automatic notification didn't go through)
Comment 5 Méven Car 2022-04-27 07:12:14 UTC
(In reply to Antonio Rojas from comment #4)
> https://invent.kde.org/network/kio-extras/-/merge_requests/151
> 
> (not sure why the automatic notification didn't go through)

You did things right `BUG: 452940` in the commit message, must be an instability in the scripting or kio-extras is not handled.
Comment 6 Antonio Rojas 2022-04-27 18:53:20 UTC
Git commit 696481c88042446a106e5eb386d804339aca893b by Antonio Rojas.
Committed on 26/04/2022 at 21:29.
Pushed by arojas into branch 'master'.

fish: don't overwrite dir mimetype with extension based one

This makes dirs with a dot in their name or special names (such as 'core') report a wrong mime type

M  +1    -1    fish/fish.cpp

https://invent.kde.org/network/kio-extras/commit/696481c88042446a106e5eb386d804339aca893b
Comment 7 Antonio Rojas 2022-04-27 18:55:18 UTC
Git commit afe11f248c663e4038f0bab99c1bcb9fd1345b69 by Antonio Rojas.
Committed on 27/04/2022 at 18:55.
Pushed by arojas into branch 'release/22.04'.

fish: don't overwrite dir mimetype with extension based one

This makes dirs with a dot in their name or special names (such as 'core') report a wrong mime type

M  +1    -1    fish/fish.cpp

https://invent.kde.org/network/kio-extras/commit/afe11f248c663e4038f0bab99c1bcb9fd1345b69