fish: don't overwrite dir mimetype with extension based one

This makes dirs with a dot in their name or special names (such as 'core') report a wrong mime type

BUG: 452940